# KE-Loadshedding-Schedule-Scrapper

./: .gitignore  DataRow.py  KERequest.py  __init__.py  dataCleaning.py  dataUtils.py  example_payload.py  formOptions.py  main.py  payload_example.txt  postTransformations.py  pyproject.toml  readme.md
