[tool.poetry]
name = "ke-loadshedding"
version = "0.1.0"
description = ""
authors = ["hashir omer <hashiromer621@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.4.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
